sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: not found: value avancBlanc
  while (debut< avancBlanc){
                ^DutchFlagAlgo:8: error: value ! is not a member of Int
    if (i! debut){
         ^DutchFlagAlgo:14: error: not enough arguments for method getCouleur: (x$1: Int)Int.
Unspecified value parameter x$1.
    if (getCouleur()==ROUGE){
                  ^DutchFlagAlgo:19: error: not enough arguments for method getCouleur: (x$1: Int)Int.
Unspecified value parameter x$1.
    }else if (getCouleur()==BLANC){
                        ^